client/src/component/TextArea/textArea.css
.textarea-main {
  width: 100%;
}
.textarea-main .textarea {
  width: 100%;
  resize: none;
  height: 5rem;
  border-radius: 5px;
  padding: 10px 16px;
  font-size: inherit;
  outline: 1px solid var(--no-focus);
}
.textarea-main .textarea:focus {
  outline: 1px solid var(--dark-grey);
}
.textarea-main .textarea-footer {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  font-size: 0.75rem;
  word-spacing: 3px;
  margin-top: 0.25rem;
}
.textarea-main .textarea-footer .warning {
  width: 70%;
  line-height: 1.6;
  color: var(--warning);
}
.textarea-main .textarea-footer .textarea-label {
  position: relative;
  color: var(--no-focus);
  border-radius: 5rem;
}/*# sourceMappingURL=textArea.css.map */

